<resources>
    <string name="app_name">Advanced Note</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note Here…</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>

    <string name="url">URL:</string>
    <string name="enter_valid_url">Enter Valid Url</string>

    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="are_you_sure_you_want_delete_this_note">Are you sure you want delete this note?</string>

</resources>