<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/urlDialougeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/add_url_background">


    <ImageView
        android:id="@+id/u"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_web_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="true"
        android:text="@string/add_url"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/u"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/u"
        app:layout_constraintTop_toTopOf="@id/u" />


    <TextView
        android:id="@+id/q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/url"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@id/u"
        app:layout_constraintStart_toStartOf="@id/u"
        app:layout_constraintTop_toBottomOf="@id/u" />

    <ImageView
        android:id="@+id/imgError"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_error"
        app:layout_constraintBottom_toBottomOf="@id/q"
        app:layout_constraintTop_toTopOf="@id/q"
        android:visibility="gone"
        android:layout_marginStart="-9dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/ColorDelete" />

    <EditText
        android:id="@+id/enterUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_valid_url"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/q"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/q"
        app:layout_constraintTop_toTopOf="@id/q" />

    <TextView
        android:id="@+id/addUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="true"
        android:padding="@dimen/_4sdp"
        android:text="@string/add_url"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterUrl" />

    <TextView
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="@dimen/_4sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addUrl"
        app:layout_constraintTop_toBottomOf="@id/enterUrl" />


</androidx.constraintlayout.widget.ConstraintLayout>